--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,6 @@
-TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-SERVER_ID=xxxxxxxxxxxxxxxxxx
-LOG_CHANNEL_ID=xxxxxxxxxxxxxxxxxx
-OFFER_CHANNEL_ID=xxxxxxxxxxxxxxxxxx
+TOKEN=xxxxxxxxxxxx
+SERVER_ID=xxxxxxxxxxxxxxxx
 
-COLOR_MESSAGE_DELETED=#998d00
-COLOR_QUOTE=0x0099ff
-COLOR_NEW_QUOTE=#993300
-COLOR_OFFER=#00ccff
+COLOR_EMBED_1=5fdcfb
 
 ENV=TEST/PROD
